anyway From Mac

--- a/client1.html
+++ b/client1.html
@@ -21,10 +21,21 @@
 
 
   <script>
+const HOST = "married-wandering-passenger.glitch.me";
+// const HOST = 'localhost';
+// const PORT = 443;
+// const PORT = 3000;
+const PORT = 9000;
+
 // client1.js
 const peer1 = new Peer('client1', {
-  host: 'localhost',
-  port: 9000,
+  host: HOST,
+  port: PORT,
+  // port: 9000,
+  // port: 3000,
+  // port: 443,
+  // path: '/peerjs',
+  secure: HOST === 'localhost' ? false : true,
   path: '/myapp/peerjs'
 });
 
@@ -47,6 +58,7 @@ let mediaStreamGlobal = null;
 
 peer1.on('call', async (call) => {
   try {
+    // const mediaStream = await navigator.mediaDevices.getUserMedia({ video: true, audio: true });
     const mediaStream = await navigator.mediaDevices.getUserMedia({ video: true, audio: true });
     mediaStreamGlobal = mediaStream;
     callGlobal = call;
