--- a/client1.html
+++ b/client1.html
@@ -6,7 +6,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="./peerjs@1.5.2/dist/peerjs.min.js"></script>
+  <!-- <script src="./peerjs@1.5.2/dist/peerjs.min.js"></script> -->
+  <script src="./peerjs.1.5.2.min.js"></script>
   
   <title>Peer 1</title>
 </head>
