anyway From Mac

--- a/client1.html
+++ b/client1.html
@@ -14,6 +14,7 @@
 <body>
 
   <h1>Peer.js Sample</h1>
+  <h2>ver0.0.1</h2>
   <div class="result"></div>
 
   <button id="answer_call" style="display: none;" onclick="answer_call()">Answer Call</button>
