--- a/client2.html
+++ b/client2.html
@@ -15,6 +15,7 @@
 <body>
 
   <h1>Peer.js Sample</h1>
+  <h2>ver0.0.1</h2>
 
   <!-- start call button -->
   <button onclick="start_call()">Start Call</button>
