anyway From Mac

--- a/client1.html
+++ b/client1.html
@@ -23,11 +23,11 @@
 
 
   <script>
-const HOST = "married-wandering-passenger.glitch.me";
-// const HOST = 'localhost';
+// const HOST = "married-wandering-passenger.glitch.me";
+const HOST = 'localhost';
 // const PORT = 443;
-// const PORT = 3000;
-const PORT = 9000;
+const PORT = 3000;
+// const PORT = 9000;
 
 // client1.js
 const peer1 = new Peer('client1', {
