--- a/client2.html
+++ b/client2.html
@@ -24,11 +24,11 @@
 
 
   <script>
-const HOST = "married-wandering-passenger.glitch.me";
-// const HOST = 'localhost';
+// const HOST = "married-wandering-passenger.glitch.me";
+const HOST = 'localhost';
 // const PORT = 443;
-// const PORT = 3000;
-const PORT = 9000;
+const PORT = 3000;
+// const PORT = 9000;
 
 
 
