--- a/client2.html
+++ b/client2.html
@@ -15,7 +15,7 @@
 <body>
 
   <h1>Peer.js Sample</h1>
-  <h2>ver0.0.2</h2>
+  <h2>ver0.0.3</h2>
 
   <!-- start call button -->
   <button onclick="start_call()">Start Call</button>
@@ -24,8 +24,9 @@
 
 
   <script>
-// const HOST = "married-wandering-passenger.glitch.me";
-const HOST = 'localhost';
+    // window.location.hostname === "taroyanaka.github.io" ? "married-wandering-passenger.glitch.me" : "localhost";
+const HOST = window.location.hostname === "taroyanaka.github.io" ? "married-wandering-passenger.glitch.me" : "localhost";
+// const HOST = 'localhost';
 // const PORT = 443;
 const PORT = 3000;
 // const PORT = 9000;
