anyway From Mac

--- a/client1.html
+++ b/client1.html
@@ -31,7 +31,8 @@ document.querySelector('h4').textContent = HOST;
 
 // const HOST = 'localhost';
 // const PORT = 443;
-const PORT = 3000;
+// const PORT = 3000;
+const PORT = HOST === 'localhost' ? 9000 : 3000;
 // const PORT = 9000;
 
 // client1.js
