--- a/client1.html
+++ b/client1.html
@@ -36,6 +36,8 @@ document.querySelector('h4').textContent = HOST;
 const PORT = HOST === 'localhost' ? 9000 : 3000;
 document.querySelector('h6').textContent = PORT;
 // const PORT = 9000;
+const PATH = '/peerjs/myapp';
+
 
 // client1.js
 const peer1 = new Peer('client1', {
@@ -47,7 +49,8 @@ const peer1 = new Peer('client1', {
   // path: '/peerjs',
   secure: HOST === 'localhost' ? false : true,
   // path: '/myapp/peerjs'
-  path: "/myapp"
+  // path: "/myapp"
+  path: PATH
 });
 
 peer1.on('open', id => {
