anyway From Mac

--- a/client3.html
+++ b/client3.html
@@ -116,7 +116,7 @@ function exe_connection(){
     <!-- <button onclick="exe_connection()">exe_connection</button> -->
 
     <!-- <p>Open the console to see what's happening.</p> -->
-    <p>このURLを2枚のタブで開く。片方に表示されたpeer id Aの英数文字列を、もう片方のタブのPeer ID BのinputにコピペしてConnect Bをクリック</p>
+    <p>このURL(https://taroyanaka.github.io/peerjs_webrtc/client3.html)2枚のタブで別々に開く。片方に表示されたpeer id Aの英数文字列を、もう片方のタブのPeer ID BのinputにコピペしてConnect Bをクリック</p>
     <!-- <div class="messages"></div> -->
     <!-- peer id A<p class="result"></p> -->
     peer id A<input class="result" type="text">
