anyway From Mac

--- a/client3.html
+++ b/client3.html
@@ -112,6 +112,7 @@ function exe_connection(){
 <body>
 
     <h1>PeerJS Example</h1>
+    <h2>version 0.0.1</h2>
     <p>サーバーサイドのコードは https://glitch.com/edit/#!/cypress-serious-bird?path=server.js</p>
     <p>参考にしたコードは https://glitch.com/~peerjs-video</p>
     <!-- exe_connection -->
