--- a/client3.html
+++ b/client3.html
@@ -5,12 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="./peerjs.1.5.2.min.js"></script>
+    <script src="./qrcode.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/node-qrcode@0.0.4/index.min.js"></script> -->
 </head>
 <!-- <script src="./main.js"></script> -->
 <script>
+    const text_to_qr = () => {
+        const Text = url_with_peer_id + '?peer_id=' + document.querySelector('.result').value;
+        // const Text = "abc";
+        console.log("text_to_qr", Text);
+        // var qrcode = new QRCode(document.getElementById("qrcode"), {
+        //     text: Text,
+        //     width: 128,
+        //     height: 128,
+        //     colorDark : "#000000",
+        //     colorLight : "#ffffff",
+        //     correctLevel : QRCode.CorrectLevel.H
+        // });
+        new QRCode(document.getElementById("qrcode"), Text);
+        
+    }
+        
         let url_with_peer_id = new URL(window.location.href);
     // 生成されたpeer idをurlに追加してhrefにセットする関数(ワンライナー)
-    const set_url_with_peer_id = () => document.getElementById('url_with_peer_id').href = url_with_peer_id + '?peer_id=' + document.querySelector('.result').value;
+    const set_url_with_peer_id = () => {
+        document.getElementById('url_with_peer_id').href = url_with_peer_id + '?peer_id=' + document.querySelector('.result').value;
+    }
     // 生成されたpeer idをgetパラメーターで受け取る関数(get paramに存在しない場合は実行しない)
     const get_peer_id = () => {
         const url = new URL(window.location.href);
@@ -130,8 +150,12 @@ function exe_connection(){
 
 
 <body>
+    <p>qrcode</p>
+    <div id="qrcode"></div>
+
+    <button onclick="text_to_qr()">text_to_qr</button>
     <h1>PeerJS Example</h1>
-    <h2>version 0.0.2</h2>
+    <h2>version 0.0.3</h2>
     <!-- url_with_peer_idを表示するためのa:link -->
     <a href="" id="url_with_peer_id">通話用URL</a>
     <p>サーバーサイドのコードは https://glitch.com/edit/#!/cypress-serious-bird?path=server.js</p>
