anyway From Mac

--- a/client3.html
+++ b/client3.html
@@ -6,9 +6,8 @@
     <title>Document</title>
     <script src="./peerjs.1.5.2.min.js"></script>
     <script src="./qrcode.js"></script>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/node-qrcode@0.0.7/index.min.js"></script> -->
+    <!-- <script src="https://cdn.jsdelivr.net/npm/node-qrcode@0.0.6/index.min.js"></script> -->
 </head>
-<audio></audio>
 <!-- <script src="./main.js"></script> -->
 <script>
 
@@ -92,74 +91,39 @@ peer.on('error', (error) => {
 
 // Handle incoming voice/video connection
 peer.on('call', (call) => {
-navigator.mediaDevices.getUserMedia({video: false, audio: true})
-  .then((stream) => {
-    call.answer(stream); // Answer the call with an A/V stream.
-    call.on('stream', renderVideo);
-
-    // Create new audio element to play the stream
-    var audioElement = document.createElement('audio');
-    audioElement.srcObject = stream;
-    audioElement.play();
-
-    // Check if setSinkId is supported
-    if (typeof audioElement.setSinkId === 'function') {
-      navigator.mediaDevices.enumerateDevices()
-        .then(function(devices) {
-          var speakerDevice = devices.find(function(device) {
-            return device.kind === 'audiooutput' && device.label.includes('Speaker');
-          });
-          if (speakerDevice) {
-            audioElement.setSinkId(speakerDevice.deviceId);
-          }
-        });
-    }
-  })
-  .catch((err) => {
-    console.error('Failed to get local stream', err);
-  });
+//   navigator.mediaDevices.getUserMedia({video: true, audio: true})
+  navigator.mediaDevices.getUserMedia({video: false, audio: true})
+    .then((stream) => {
+      call.answer(stream); // Answer the call with an A/V stream.
+      call.on('stream', renderVideo);
+    })
+    .catch((err) => {
+      console.error('Failed to get local stream', err);
+    });
 });
 
 // Initiate outgoing connection
 let connectToPeer = () => {
-    let peerId = document.querySelector('#connect-to-peer').value;
+  let peerId = document.querySelector('#connect-to-peer').value;
 //   logMessage(`Connecting to ${peerId}...`);
-    
-    let conn = peer.connect(peerId);
-    conn.on('data', (data) => {
-        // logMessage(`received: ${data}`);
-    });
-    conn.on('open', () => {
-        conn.send('hi!');
-    });
-    
+  
+  let conn = peer.connect(peerId);
+  conn.on('data', (data) => {
+    // logMessage(`received: ${data}`);
+  });
+  conn.on('open', () => {
+    conn.send('hi!');
+  });
+  
 //   navigator.mediaDevices.getUserMedia({video: true, audio: true})
-    navigator.mediaDevices.getUserMedia({video: false, audio: true})
-        .then((stream) => {
-            let call = peer.call(peerId, stream);
-            call.on('stream', renderVideo);
-
-            // Create new audio element to play the stream
-            var audioElement = document.createElement('audio');
-            audioElement.srcObject = stream;
-            audioElement.play();
-
-            // Check if setSinkId is supported
-            if (typeof audioElement.setSinkId === 'function') {
-                navigator.mediaDevices.enumerateDevices()
-                    .then(function(devices) {
-                        var speakerDevice = devices.find(function(device) {
-                            return device.kind === 'audiooutput' && device.label.includes('Speaker');
-                        });
-                        if (speakerDevice) {
-                            audioElement.setSinkId(speakerDevice.deviceId);
-                        }
-                    });
-            }
-        })
-        .catch((err) => {
-        //   logMessage('Failed to get local stream', err);
-        });
+  navigator.mediaDevices.getUserMedia({video: false, audio: true})
+    .then((stream) => {
+      let call = peer.call(peerId, stream);
+      call.on('stream', renderVideo);
+    })
+    .catch((err) => {
+    //   logMessage('Failed to get local stream', err);
+    });
 };
 // let logMessage = (message) => {
 //   messagesEl.appendChild(newMessage);
@@ -211,7 +175,7 @@ if (typeof audioElement.setSinkId === 'function') {
 
     <button onclick="text_to_qr()">text_to_qr</button>
     <h1>PeerJS Example</h1>
-    <h2>version 0.0.7</h2>
+    <h2>version 0.0.6</h2>
     <!-- url_with_peer_idを表示するためのa:link -->
     <a href="" id="url_with_peer_id">通話用URL</a>
     <p>サーバーサイドのコードは https://glitch.com/edit/#!/cypress-serious-bird?path=server.js</p>
